TODO#2 : Fix integration tests with TODO comments :passed the itegration tests. Added test exclusions for constants package, class with main function, ticket object, parkingSpot object. Addid system to not let in vehicle is another vehicle with same reg number is already in parkinglot

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,6 @@
 # Root logger option
-log4j.rootLogger=INFO 
+#log4j.rootLogger=INFO
+Dlog4j.configurationFile=INFO 
 #, stdout
 
 # Redirect log messages to console
